--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,16 @@
   },
   "dependencies": {
     "axios": "^1.6.7",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "lucide-react": "^0.358.0",
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.0",
     "swr": "^2.2.5",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
