--- a/backend/.env.example
+++ b/backend/.env.example
@@ -57,8 +57,8 @@ VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-MIDTRANS_CLIENT_KEY=SB-Mid-client-5o_Ubr0-SXDlQGP-
-MIDTRANS_SERVER_KEY=SB-Mid-server-W_JAxbCleeTZQ0GbonHZ5w1B
+MIDTRANS_CLIENT_KEY=
+MIDTRANS_SERVER_KEY=
 MIDTRANS_IS_PRODUCTION=false
 MIDTRANS_IS_SANITIZED=true
 MIDTRANS_IS_3DS=true
