--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,10 +1,15 @@
 {
   "version": 2,
-  "functions": {
-    "index.php": {
-      "runtime": "vercel-php@0.6.0"
+  "builds": [
+    {
+      "src": "index.php",
+      "use": "vercel-php@0.6.1"
+    },
+    {
+      "src": "/public/**",
+      "use": "@vercel/static"
     }
-  },
+  ],
   "routes": [
     {
       "src": "/(css|js)/(.*)",
