--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,14 +1,14 @@
 {
   "version": 2,
   "functions": {
-    "index.php": {
+    "api/index.php": {
       "runtime": "vercel-php@0.6.1"
     }
   },
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "index.php"
+      "dest": "/api/index.php"
     }
   ],
   "env": {
